# FaceVerse

./: .gitignore  Dockerfile  pyproject.toml
faceversev3_jittor/: tracking_offline_cuda.py
