[tool.poetry]
name = "faceversev3-jittor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "faceversev3_jittor"}]

[tool.poetry.dependencies]
python = "^3.9"
jittor = "1.3.8.5"
mediapipe = "0.10.2"
numpy = "1.25.2"
tqdm = "4.65.0"
onnxruntime = "1.15.1"
pillow = "9.5.0"
opencv-python = "4.8.0.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
